--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(LIB_SRC
         AIO/util.cc
         AIO/config.cc
         AIO/thread.cc
+        AIO/fiber.cc
+        AIO/scheduler.cc
 )
 
 add_library(AIO SHARED ${LIB_SRC})
@@ -42,6 +44,16 @@ add_executable(test_thread tests/test_thread.cc)
 force_redefine_file_macro_for_sources(test_thread) #__FILE__
 add_dependencies(test_thread AIO)
 target_link_libraries(test_thread ${LIBS})
+
+add_executable(test_util tests/test_util.cc)
+force_redefine_file_macro_for_sources(test_util) #__FILE__
+add_dependencies(test_util AIO)
+target_link_libraries(test_util ${LIBS})
+
+add_executable(test_fiber tests/test_fiber.cc)
+force_redefine_file_macro_for_sources(test_fiber) #__FILE__
+add_dependencies(test_fiber AIO)
+target_link_libraries(test_fiber ${LIBS})
 
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
